--- a/P4CabreraBeginnerAdventure/BeginnerAdventureP4Cabrera/Assets/GameUI.uxml
+++ b/P4CabreraBeginnerAdventure/BeginnerAdventureP4Cabrera/Assets/GameUI.uxml
@@ -1,3 +1,7 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <ui:VisualElement name="HealthBarBackground" style="flex-grow: 0; background-image: url(&quot;project://database/Assets/UnityTechnologies/StarterAsset/Art/Ducko/UI/UIHealthFrame.png?fileID=21300000&amp;guid=b47cdbd2062c5e64ba5a0bf3f6b045b1&amp;type=3#UIHealthFrame&quot;); width: 375px; height: 392px; -unity-background-scale-mode: scale-to-fit;" />
+    <ui:VisualElement name="HealthBarContainer" style="flex-grow: 1; position: absolute; height: 55px; width: 204px; top: 166px; left: 153px; background-image: url(&quot;project://database/Assets/UnityTechnologies/StarterAsset/Art/Ducko/UI/UIHealthBar.png?fileID=2800000&amp;guid=39fe000f2b6d9d04b93d6a76310e29aa&amp;type=3#UIHealthBar&quot;);">
+        <ui:VisualElement name="HealthBar" style="flex-grow: 1; background-image: none; align-items: auto; align-self: flex-start;" />
+    </ui:VisualElement>
+    <ui:VisualElement name="CharaterPortrait" style="flex-grow: 1; background-image: url(&quot;project://database/Assets/UnityTechnologies/StarterAsset/Art/Ducko/UI/CharacterPortrait.png?fileID=2800000&amp;guid=0332b35b8fe3cf8458eb0558889493d1&amp;type=3#CharacterPortrait&quot;); -unity-background-scale-mode: scale-to-fit; position: absolute; width: 130px; height: 135px; top: 128px; left: 9px;" />
 </ui:UXML>
